<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:paddingBottom="80dp"
    android:clickable="true"
    tools:context=".fragments.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/white"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textColor="@color/teal"
            android:fontFamily="@font/outfit_medium"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="250dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAddress" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="250dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:paddingHorizontal="80dp"
            android:text="EDIT"
            android:background="@drawable/rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editEmail"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="250dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLastName" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="250dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfile" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="250dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>